# hard-hexagon

./: CITATION.cff  LICENSE  README.md  conftest.py  functions.py  plot_solution.py  print_solution.py  pyproject.toml  requirements-dev.txt
hardhexagon/: __init__.py
tests/: test_functions.py  test_hardhexagon.py
