[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hard-hexagon"
description = "Baxter's exact solution for the hard hexagon model"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Sergey Akimenko", email = "iakobian@gmail.com" }]
keywords = [
    "hard hexagon",
    "exact solution",
    "statistical mechanics",
    "lattice gas",
    "triangular lattice",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
plot = ["matplotlib"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/IakOBiaN/hard-hexagon"
Repository = "https://github.com/IakOBiaN/hard-hexagon"

[tool.setuptools]
packages = ["hardhexagon"]

[tool.setuptools.dynamic]
version = { attr = "hardhexagon.__version__" }
